--- a/WatchNow.json
+++ b/WatchNow.json
@@ -11,6 +11,46 @@
      "MoviePoster":"https://raw.githubusercontent.com/habibiguy/Project2TestAPI/main/the_godfather.jpg",
      "MovieTrailer":"https://www.youtube.com/watch?v=UaVTIH8mujA&t=49s"},
     
+    {"MovieName":"The Dark Knight",
+     "MovieSummary":"When the menace known as the Joker wreaks havoc and chaos on the people of Gotham, Batman must accept one of the greatest psychological and physical tests of his ability to fight injustice.",
+     "MovieLength":"2h 32m",
+     "MovieYear":"2008",
+     "MovieGenre":"Action, Crime, Drama",
+     "MovieRating":"9.0",
+     "MovieDirector":"Christopher Nolan",
+     "MoviePoster":"https://raw.githubusercontent.com/habibiguy/Project2TestAPI/main/the_dark_knight.jpg",
+     "MovieTrailer":"https://www.youtube.com/watch?v=EXeTwQWrcwY"},
+    
+     {"MovieName":"Inception",
+     "MovieSummary":"A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a C.E.O., but his tragic past may doom the project and his team to disaster.",
+     "MovieLength":"2h 28m",
+     "MovieYear":"2010",
+     "MovieGenre":"Action, Adventure, Sci-Fi",
+     "MovieRating":"8.7",
+     "MovieDirector":"Christopher Nolan",
+     "MoviePoster":"https://raw.githubusercontent.com/habibiguy/Project2TestAPI/main/inception.jpg",
+     "MovieTrailer":"https://www.youtube.com/watch?v=YoHD9XEInc0"},
+    
+    {"MovieName":"The Matrix",
+     "MovieSummary":"When a beautiful stranger leads computer hacker Neo to a forbidding underworld, he discovers the shocking truth--the life he knows is the elaborate deception of an evil cyber-intelligence.",
+     "MovieLength":"2h 16m",
+     "MovieYear":"1999",
+     "MovieGenre":"Action, Sci-Fi",
+     "MovieRating":"8.7",
+     "MovieDirector":"Lana & Lilly Wachowski",
+     "MoviePoster":"https://raw.githubusercontent.com/habibiguy/Project2TestAPI/main/the_matrix.jpg",
+     "MovieTrailer":"https://www.youtube.com/watch?v=m8e-FF8MsqU"},
+    
+      {"MovieName":"Goodfellas",
+     "MovieSummary":"The story of Henry Hill and his life in the mob, covering his relationship with his wife Karen Hill and his mob partners Jimmy Conway and Tommy DeVito in the Italian-American crime syndicate.",
+     "MovieLength":"2h 25m",
+     "MovieYear":"1990",
+     "MovieGenre":"Biography, Crime, Drama",
+     "MovieRating":"8.7",
+     "MovieDirector":"Martin Scorsese",
+     "MoviePoster":"https://raw.githubusercontent.com/habibiguy/Project2TestAPI/main/goodfellas.jpg",
+     "MovieTrailer":"https://www.youtube.com/watch?v=2ilzidi_J8Q"},
+    
   ],
   "Status":"OK"
 }
