--- a/WatchNow.json
+++ b/WatchNow.json
@@ -41,7 +41,7 @@
      "MoviePoster":"https://raw.githubusercontent.com/habibiguy/Project2TestAPI/main/the_matrix.jpg",
      "MovieTrailer":"https://www.youtube.com/watch?v=m8e-FF8MsqU"},
     
-      {"MovieName":"Goodfellas",
+     {"MovieName":"Goodfellas",
      "MovieSummary":"The story of Henry Hill and his life in the mob, covering his relationship with his wife Karen Hill and his mob partners Jimmy Conway and Tommy DeVito in the Italian-American crime syndicate.",
      "MovieLength":"2h 25m",
      "MovieYear":"1990",
@@ -51,6 +51,35 @@
      "MoviePoster":"https://raw.githubusercontent.com/habibiguy/Project2TestAPI/main/goodfellas.jpg",
      "MovieTrailer":"https://www.youtube.com/watch?v=2ilzidi_J8Q"},
     
+     {"MovieName":"Fight Club",
+     "MovieSummary":"An insomniac office worker and a devil-may-care soap maker form an underground fight club that evolves into much more.",
+     "MovieLength":"2h 19m",
+     "MovieYear":"1999",
+     "MovieGenre":"Drama",
+     "MovieRating":"8.8",
+     "MovieDirector":"David Fincher",
+     "MoviePoster":"",
+     "MovieTrailer":"https://www.youtube.com/watch?v=BdJKm16Co6M&t=1s"},
+       
+    {"MovieName":"Interstellar",
+     "MovieSummary":"A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival.",
+     "MovieLength":"2h 49m",
+     "MovieYear":"2014",
+     "MovieGenre":"Adventure, Drama, Sci-Fi",
+     "MovieRating":"8.6",
+     "MovieDirector":"Christopher Nolan",
+     "MoviePoster":"",
+     "MovieTrailer":"https://www.youtube.com/watch?v=zSWdZVtXT7E&t=2s"},
+    
+     {"MovieName":"Parasite",
+     "MovieSummary":"Greed and class discrimination threaten the newly formed symbiotic relationship between the wealthy Park family and the destitute Kim clan.",
+     "MovieLength":"2h 12m",
+     "MovieYear":"2019",
+     "MovieGenre":"Drama, Thriller",
+     "MovieRating":"8.5",
+     "MovieDirector":"Bong Joon Ho",
+     "MoviePoster":"",
+     "MovieTrailer":"https://www.youtube.com/watch?v=isOGD_7hNIY"},
   ],
   "Status":"OK"
 }
